Updated the "Back to home" link to be sticky

--- a/recipes/chicken-wings.html
+++ b/recipes/chicken-wings.html
@@ -7,7 +7,17 @@
     <title>Chicken Wing Recipe</title>
   </head>
   <body>
-    <a href="../index.html">&#60; Back to Home</a>
+    <nav
+      style="
+        width: 100%;
+        background: #fff;
+        position: sticky;
+        top: 0;
+        padding: 16px 0;
+      "
+    >
+      <a href="../index.html">&#60; Back to Home</a>
+    </nav>
     <br />
     <h1>Grilled Chicken Wings With Summer Berry Agrodolce</h1>
     <img
