--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,17 @@
     <title>Pizza Recipe</title>
   </head>
   <body>
-    <a href="../index.html">&#60; Back to Home</a>
+    <nav
+      style="
+        width: 100%;
+        background: #fff;
+        position: sticky;
+        top: 0;
+        padding: 16px 0;
+      "
+    >
+      <a href="../index.html">&#60; Back to Home</a>
+    </nav>
     <br />
     <h1>Homemade Pizza & Pizza Dough</h1>
     <img
