--- a/index.html
+++ b/index.html
@@ -7,21 +7,34 @@
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <p>
-      This is the platform for all the recipes that are beloved by the almight
-      Odin! We provide access to over 2,000 of the finest eats across all the
-      galaxies.
-    </p>
+    <h1 style="text-align: center">Odin Recipes</h1>
+    <div id="container" style="display: flex; justify-content: center">
+      <div class="left-col">
+        <img src="./feed-me.png" alt="The Almight Odin" style="width: 600px" />
+      </div>
 
-    <ul>
-      <li><a href="recipes/pizza.html">Homemade Pizza & Pizza Dough</a></li>
-      <li><a href="recipes/cheeseburgers.html">Classic Cheeseburgers</a></li>
-      <li>
-        <a href="recipes/chicken-wings.html"
-          >Grilled Chicken Wings With Summer Berry Agrodolce</a
-        >
-      </li>
-    </ul>
+      <div class="right-col" style="margin-left: 24px">
+        <h2>About</h2>
+        <p>
+          This is the platform for all the recipes that are beloved by the
+          almight Odin! <br />
+          We provide access to over 2,000 of the finest eats across all the
+          galaxies.
+        </p>
+        <br />
+        <h2>Recipes</h2>
+        <ul>
+          <li><a href="recipes/pizza.html">Homemade Pizza & Pizza Dough</a></li>
+          <li>
+            <a href="recipes/cheeseburgers.html">Classic Cheeseburgers</a>
+          </li>
+          <li>
+            <a href="recipes/chicken-wings.html"
+              >Grilled Chicken Wings With Summer Berry Agrodolce</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
