Added a back to top button Added a back to top button Added a back to top button

--- a/recipes/cheeseburgers.html
+++ b/recipes/cheeseburgers.html
@@ -95,5 +95,9 @@
         with ketchup or mayo. Or both. Serve immediately.
       </li>
     </ol>
+
+    <br />
+    <br />
+    <a href="#top"> Back to Top</a>
   </body>
 </html>
