--- a/recipes/chicken-wings.html
+++ b/recipes/chicken-wings.html
@@ -112,5 +112,9 @@
         remaining lemon wedges for squeezing over as desired.
       </li>
     </ol>
+
+    <br />
+    <br />
+    <a href="#top"> Back to Top</a>
   </body>
 </html>
