--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -78,5 +78,8 @@
       <li>Add a pinch of red pepper flakes (optional)</li>
       <li>Drizzle with olive oil and serve.</li>
     </ol>
+    <br />
+    <br />
+    <a href="#top"> Back to Top</a>
   </body>
 </html>
